bug da mudança de velocidade corrigido

--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -52,7 +52,7 @@
             <i class="bi bi-question-lg"></i> Ajuda
           </button>
 
-          <button id="reset" class="btn btn-danger">
+          <button id="reset" class="btn btn-danger" disabled>
             <i class="bi bi-pause"></i> Resetar
           </button>
         </div>
@@ -146,11 +146,9 @@
 
         <!-- Objetos -->
         <div class="game-object" id="object">
-          <p>V = ? m/s</p>
         </div>
 
         <div class="game-object2 d-block" id="object2">
-          <p>V = 40 m/s</p>
         </div>
       </div>
     </div>
