--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -6,21 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase I - Cinemática</title>
     <link rel="stylesheet" href="../src/css/phase_one.css" />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
 
-  <body class="bg-dark">
+  <body class="bg-dark text-white">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Conteiner que engloba todo o projeto -->
-    <main id="initial-screen" class="d-block w-100 vh-100">
+    <main class="d-block w-100 vh-100">
       <div
-        id="start-button"
-        class="d-flex justify-content-center align-items-center vh-100"
+        id="initial-screen"
+        class="d-flex flex-column justify-content-center align-items-center vh-100 p-4"
       >
-        <button class="btn" type="button">começar</button>
+        <button
+          id="start-button"
+          class="btn btn-primary btn-sm ms-1"
+          type="button"
+        >
+          Continuar
+        </button>
       </div>
 
       <div
         data-js="game-screen"
-        class="d-none justify-content-center align-items-center vh-100"
+        class="d-none flex-column justify-content-center align-items-center vh-100"
       >
         <div id="game-container" class="d-block overflow-hidden">
           <div class="d-block p-3 text-end">
@@ -32,17 +45,28 @@
             >
               <i class="bi bi-question-lg"></i> Ajuda
             </button>
-            <button id="reset" class="btn btn-danger">
+
+            <button id="reset" class="btn btn-danger" disabled>
               <i class="bi bi-pause"></i> Resetar
             </button>
           </div>
 
-          <div data-js="overlay" class="d-none w-75 p-4 mx-auto bg-white">
-            <p class="text-center">
-              Sabendo que a raposa inicia sua corrida a 60km/h, e o Peba começa
-              a fugir ao mesmo tempo, calcule a velocidade mínima que ele deve
-              correr para que a raposa não o pegue, considerando que a distância
-              inicial entre os dois é de 500 pixels.
+          <!-- Código do overlay -->
+          <div data-js="overlay" class="d-none bg-dark w-75 p-4 mx-auto">
+            <p class="text-center fs-5">
+              Um tatu está fugindo de uma raposa e, para se salvar, ele precisa
+              chegar à sua toca. Sua tarefa é descobrir a velocidade
+              <strong>mínima</strong> do tatu para que ele fuja do predador!
+              <br />
+            </p>
+
+            <p class="texte-center">
+              <strong>Dados</strong>: leve em consideração que, no instante de
+              sua observação, o tatu encontra-se em repouso e à 1.200m do seu
+              destino. Considere o movimento descrito por ele como sendo
+              Retilíneo Uniforme e o tempo que ele leva para chegar na metade do
+              trajeto, como sendo 20s. A raposa encontra-se com velocidade
+              constante igual a 40m/s.
             </p>
 
             <div
@@ -51,17 +75,18 @@
               <input
                 class="form-control mb-2"
                 type="text"
-                id="velocidadeDigitada"
+                id="inputVelocity"
+                placeholder="Velocidade do tatu"
               />
-              <button data-js="confirmAnswert" class="btn btn-info">
+              <button data-js="confirmAnswert" class="btn btn-info" disabled>
                 Confirmar
               </button>
             </div>
           </div>
 
-          <!-- Codigo HTML do modal -->
+          <!-- Código HTML do modal -->
           <div
-            class="modal fade"
+            class="modal fade text-black"
             id="help"
             tabindex="-1"
             aria-labelledby="exampleModalLabel"
@@ -80,6 +105,7 @@
                     aria-label="Close"
                   ></button>
                 </div>
+
                 <div class="modal-body text-center">
                   <h4>Movimento retilineo unforme</h4>
                   <br />
@@ -99,25 +125,103 @@
                   <br />
                   <p>Tente você mesmo agora!<br /></p>
                 </div>
+
                 <div class="modal-footer">
                   <button
                     type="button"
                     class="btn btn-secondary"
                     data-bs-dismiss="modal"
                   >
-                    Close
+                    Fechar
                   </button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="game-object" id="object">
-            <p>V = ? KM/H</p>
-          </div>
+          <!-- Objetos -->
+          <div class="game-object" id="object"></div>
 
-          <div class="game-object2 d-none" id="object2">
-            <p>V = 60 KM/H</p>
+          <div class="game-object2 d-block" id="object2"></div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="meuModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="modalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title text-black" id="modalLabel">
+                Fim da fase
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Fechar"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p class="textWin text-black">
+                Parabéns, Você ganhou! Siga para próximo desafio.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+                id="btGo"
+              >
+                Proxima fase
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="meuModal2"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="modalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title text-black" id="modalLabel">
+                Fim da fase
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Fechar"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p class="textWin text-black">
+                Não foi dessa vez! Tente Novamente.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button id="btreset" class="btn btn-danger" data-dismiss="modal">
+                Recomeçar
+                <i class="bi bi-pause"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
