--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -104,10 +104,10 @@
 
             <p class="texte-center">
               <strong>Dados</strong>: leve em consideração que, no instante de
-              sua observação, o tatu encontra-se em repouso e à 1.200m do seu
+              sua observação, o tatu encontra-se em repouso e à <span class="final-position"></span> do seu
               destino. Considere o movimento descrito por ele como sendo
-              Retilíneo Uniforme e o tempo que ele leva para chegar na metade do
-              trajeto, como sendo 20s. A raposa encontra-se com velocidade
+              Retilíneo Uniforme e o tempo que ele leva para chegar <span class="initial-position"></span>, 
+              como sendo 20s. A raposa encontra-se com velocidade
               constante igual a 40m/s.
             </p>
 
@@ -312,7 +312,7 @@
     </main>
 
     <!-- Script javascript -->
-    <script src="../src/js/phase_one.js"></script>
+    <script type="module" src="../src/js/phase_one.js"></script>
     <script
       type="module"
       src="../node_modules/bootstrap/js/src/modal.js"
