bug da movimentação

--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -104,11 +104,12 @@
 
             <p class="texte-center">
               <strong>Dados</strong>: leve em consideração que, no instante de
-              sua observação, o tatu encontra-se em repouso e à <span class="final-position"></span> do seu
-              destino. Considere o movimento descrito por ele como sendo
-              Retilíneo Uniforme e o tempo que ele leva para chegar <span class="initial-position"></span>, 
-              como sendo 20s. A raposa encontra-se com velocidade
-              constante igual a 40m/s.
+              sua observação, o tatu encontra-se em repouso e à
+              <span class="final-position"></span> do seu destino. Considere o
+              movimento descrito por ele como sendo Retilíneo Uniforme e o tempo
+              que ele leva para chegar <span class="initial-position"></span>,
+              como sendo 20s. A raposa encontra-se com velocidade constante
+              igual a 40m/s.
             </p>
 
             <div
@@ -122,7 +123,7 @@
                   class="form-check-input"
                   id="radio1"
                 />
-                <label for="radio1">30m/s</label>
+                <label for="radio1"></label>
               </div>
 
               <div class="form-check">
@@ -133,17 +134,18 @@
                   class="form-check-input"
                   id="radio2"
                 />
-                <label for="radio2">25m/s</label>
+                <label for="radio2"></label>
               </div>
 
               <div class="form-check">
                 <input
+                  role="button"
                   type="radio"
                   name="velocity"
                   class="form-check-input"
                   id="radio3"
                 />
-                <label for="radio3">20m/s</label>
+                <label for="radio3"></label>
               </div>
 
               <div class="form-check">
@@ -154,7 +156,7 @@
                   class="form-check-input"
                   id="radio4"
                 />
-                <label for="radio4">18m/s</label>
+                <label for="radio4"></label>
               </div>
 
               <div class="form-check">
@@ -165,7 +167,7 @@
                   class="form-check-input"
                   id="radio5"
                 />
-                <label for="radio5">15m/s</label>
+                <label for="radio5"></label>
               </div>
 
               <button data-js="confirmAnswert" class="btn btn-info" disabled>
