link na index html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <h3>Página inicial em construção!</h3>
+    <a href="./pages/phase_one.html">Link para primeira fase</a>
   </body>
 </html>
