--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -313,7 +313,7 @@
               <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
             </div>
             <div class="modal-footer">
-              <button id="btreset" class="btn btn-danger" data-dismiss="modal">
+              <button id="restart" class="btn btn-danger" data-dismiss="modal">
                 Recomeçar
                 <i class="bi bi-pause"></i>
               </button>
