--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -136,7 +136,7 @@
                   Para resolver esta quetão, o aluno prescisa se lembrar do
                   conceito universal da cinematica:
                 </p>
-                <img class="equacaoMRU" src="../src/assets/images/equacao.jpg" alt="" />
+                <img class="equacaoMRU" src="../src/images/equacao.jpg" alt="" />
                 <p>
                   Como a quetão nos forne a velocidade e tempo, só precisamos
                   substituir na formula para encontrarmos a distancia total.
