--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -82,7 +82,7 @@
             movimento descrito por ele como sendo Retilíneo Uniforme e o tempo
             que ele leva para chegar <span class="initial-position"></span>,
             como sendo 20s. A raposa encontra-se com velocidade constante
-            igual a 40m/s.
+            igual a <span class="fox-const-velocity-text"></span>m/s.
           </p>
 
           <div class="d-flex flex-row justify-content-center align-items-center gap-3">
