--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h3>Página inicial em construção!</h3>
-    <a href="./pages/phase_one.html">Link para primeira fase</a>
+    <a href="./pages/phase_one_v1.html">Link para primeira fase (versão 1)</a>
+    <a href="./pages/phase_one.html">Link para primeira fase (versão 2)</a>
   </body>
 </html>
