correção de bugs

--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -78,7 +78,7 @@
             <span class="final-position"></span> do seu destino. Considere o
             movimento descrito por ele como sendo Retilíneo Uniforme e o tempo
             que ele leva para chegar <span class="initial-position"></span>,
-            como sendo 20s. A raposa encontra-se com velocidade constante
+            como sendo <span class="half-time-text"></span>s. A raposa encontra-se com velocidade constante
             igual a <span class="fox-const-velocity-text"></span>m/s.
           </p>
 
