--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -8,6 +8,7 @@
   <title>Fase I - Cinemática</title>
   <link rel="stylesheet" href="../src/css/phase_one.css" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+
 </head>
 
 <body class="bg-dark text-white">
@@ -173,7 +174,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btGo">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="btGo">
               Proxima fase
             </button>
           </div>
@@ -186,7 +187,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Fechar">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -209,6 +210,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="../src/js/bootstrap.min.js"></script>
 </body>
 
 </html>
