bugs dos botões e posições resolvidos

--- a/pages/phase_one_v1.html
+++ b/pages/phase_one_v1.html
@@ -175,7 +175,7 @@
               <button
                 type="button"
                 class="close"
-                data-dismiss="modal"
+                data-bs-dismiss="modal"
                 aria-label="Fechar"
               >
                 <span aria-hidden="true">&times;</span>
@@ -190,7 +190,7 @@
               <button
                 type="button"
                 class="btn btn-secondary"
-                data-dismiss="modal"
+                data-bs-dismiss="modal"
                 id="btGo"
               >
                 Proxima fase
@@ -217,7 +217,7 @@
               <button
                 type="button"
                 class="close"
-                data-dismiss="modal"
+                data-bs-dismiss="modal"
                 aria-label="Fechar"
               >
                 <span aria-hidden="true">&times;</span>
@@ -229,7 +229,11 @@
               </p>
             </div>
             <div class="modal-footer">
-              <button id="btreset" class="btn btn-danger" data-dismiss="modal">
+              <button
+                id="btreset"
+                class="btn btn-danger"
+                data-bs-dismiss="modal"
+              >
                 Recomeçar
                 <i class="bi bi-pause"></i>
               </button>
@@ -243,6 +247,6 @@
     <script src="../src/js/phase_one_v1.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../src/js/bootstrap.min.js"></script>
   </body>
 </html>
