novas fases no v1

--- a/pages/phase_one_v1.html
+++ b/pages/phase_one_v1.html
@@ -74,11 +74,13 @@
 
             <p class="texte-center">
               <strong>Dados</strong>: leve em consideração que, no instante de
-              sua observação, o tatu encontra-se em repouso e à 1.200m do seu
-              destino. Considere o movimento descrito por ele como sendo
-              Retilíneo Uniforme e o tempo que ele leva para chegar na metade do
-              trajeto, como sendo 20s. A raposa encontra-se com velocidade
-              constante igual a 40m/s.
+              sua observação, o tatu encontra-se em repouso e à
+              <span class="final-position"></span> do seu destino. Considere o
+              movimento descrito por ele como sendo Retilíneo Uniforme e o tempo
+              que ele leva para chegar <span class="initial-position"></span>,
+              como sendo <span class="half-time-text"></span>s. A raposa
+              encontra-se com velocidade constante igual a
+              <span class="fox-const-velocity-text"></span>m/s.
             </p>
 
             <div
@@ -244,7 +246,7 @@
     </main>
 
     <!-- Script javascript -->
-    <script src="../src/js/phase_one_v1.js"></script>
+    <script type="module" src="../src/js/phase_one_v1.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="../src/js/bootstrap.min.js"></script>
