--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciência e tecnologia - aprenda física jogando!</title>
-    <link rel="stylesheet" href="src/css/global.css" />
+    <link rel="stylesheet" href="src/css/phase_one.css" />
   </head>
   <body>
     <h3>Página inicial em construção!</h3>
     <a href="./pages/phase_one_v1.html">Link para primeira fase (versão 1)</a>
+    <br>
     <a href="./pages/phase_one.html">Link para primeira fase (versão 2)</a>
   </body>
 </html>
