--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -72,7 +72,7 @@
               d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"
             />
           </svg>
-          <div class="timerDisplay">00:00</div>
+          <div class="timerDisplay">04:00</div>
         </div>
 
         <div id="game-container" class="d-block overflow-hidden">
@@ -219,8 +219,8 @@
                     alt=""
                   />
                   <p>
-                    Como a quetão nos forne a velocidade e tempo, só precisamos
-                    substituir na formula para encontrarmos a distancia total.
+                    Como a quetão nos forne a distância e o tempo, só precisamos
+                    substituir na formula para encontrarmos a velocidade mínima.
                   </p>
                   <br />
                   <p>Tente você mesmo agora!<br /></p>
