--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -246,7 +246,7 @@
         </div>
       </div>
 
-      <!-- Modal -->
+      <!-- Modal 2 -->
       <div
         class="modal fade"
         id="meuModal"
@@ -287,7 +287,7 @@
         </div>
       </div>
 
-      <!-- Modal -->
+      <!-- Modal 3 -->
       <div
         class="modal fade"
         id="meuModal2"
@@ -326,6 +326,7 @@
         </div>
       </div>
 
+      <!-- Modal 4 -->
       <div
         class="modal fade"
         id="meuModal3"
@@ -361,6 +362,47 @@
                 <strong>Tempo gasto na 3ª pergunta: </strong
                 ><span data-js="showThirdTime"></span>
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal 5-->
+      <div
+        class="modal fade"
+        id="meuModal5"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="modalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
+              <button
+                type="button"
+                class="close"
+                data-bs-dismiss="modal"
+                aria-label="Fechar"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p class="textWin">
+                Infelizmente o tempo acabou! Siga para o próximo desafio.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+                id="btGo2"
+              >
+                Próxima fase
+              </button>
             </div>
           </div>
         </div>
