distância entre raposa e tatu

--- a/pages/phase_one_v1.html
+++ b/pages/phase_one_v1.html
@@ -63,7 +63,7 @@
             que ele leva para chegar <span class="initial-position"></span>,
             como sendo <span class="half-time-text"></span>s. A raposa
             encontra-se com velocidade constante igual a
-            <span class="fox-const-velocity-text"></span>m/s.
+            <span class="fox-const-velocity-text"></span>m/s e a distância atual entre ela e o tatu é de <span class="dist-between-fox-armadillo"></span>m.
           </p>
 
           <div class="d-flex flex-column justify-content-center align-items-center">
