--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -79,7 +79,7 @@
             que ele leva para chegar <span class="start-position-text"></span>,
             como sendo <span class="half-time-text"></span>s. A raposa
             encontra-se com velocidade constante igual a
-            <span class="fox-velocity-text"></span>m/s.
+            <span class="fox-velocity-text"></span>m/s e a distância atual entre ela e o tatu é de <span class="dist-between-fox-armadillo"></span>m.
           </p>
 
           <div class="d-flex flex-row justify-content-center align-items-center gap-3">
