--- a/pages/phase_one_v1.html
+++ b/pages/phase_one_v1.html
@@ -173,28 +173,23 @@
       </div>
     </div>
 
-    <!-- modal para o fim do desafio -->
-    <div class="modal fade" id="meuModal3" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <!-- Modal para mostar os dados do usuário -->
+    <div id="completeChallenge" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false"  tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title text-black" id="modalLabel">
-              Fim do desafio!
-            </h5>
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Fechar">
-              <span aria-hidden="true">&times;</span>
-            </button>
+            <h5 class="modal-title" id="modalLabel">Desafio completo!</h5>
           </div>
-
           <div class="modal-body">
-            <p class="textWin">Não há mais atividades a serem resolvidas!</p>
-          </div>
-
-          <div class="modal-footer">
-            <button class="btn btn-danger" data-bs-dismiss="modal">
-              Fechar
-              <i class="bi bi-pause"></i>
-            </button>
+            <p class="text-black">
+              Parabéns por completar os desafios! <br>Por favor, nos diga qual foi a sua lógica para a resolução das questões:
+            </p>
+            <div class="d-flex flex-row">
+              <input type="text" class="form-control me-1" name="logic">
+              <button data-submit-logic type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#completeChallenge" disabled>
+                Enviar
+              </button>  
+            </div>
           </div>
         </div>
       </div>
