--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -28,7 +28,7 @@
           magni consectetur. Voluptas, architecto in expedita harum ad soluta
           dignissimos nam commodi perferendis pariatur quam vel aspernatur ut
           cum omnis. <br /><br />
-          Antes de comerçar o jogo, que tal nos informar seu nome?
+          Antes de comerçar o jogo, informe seu nickname
         </p>
 
         <div class="d-flex mx-3">
@@ -37,6 +37,7 @@
             type="text"
             class="form-control"
             placeholder="Nome"
+            autocomplete="off"
           />
           <button
             data-start-game
@@ -214,20 +215,20 @@
                 </div>
 
                 <div class="modal-body text-center">
-                  <h4>Movimento retilineo unforme</h4>
+                  <h4>Movimento Retilíneo Uniforme</h4>
                   <br />
                   <p>
                     Para resolver esta questão, o aluno prescisa se lembrar do
-                    conceito universal da cinematica:
+                    conceito universal da cinemática:
                   </p>
                   <img
                     class="equacaoMRU"
                     src="../src/images/equacao.jpg"
-                    alt=""
+                    alt="equacaoMRU"
                   />
                   <p>
                     Como a questão nos forne a distância e o tempo, só
-                    precisamos substituir na formula para encontrarmos a
+                    precisamos substituir na fórmula para encontrarmos a
                     velocidade mínima.
                   </p>
                   <br />
@@ -272,7 +273,7 @@
             </div>
             <div class="modal-body">
               <p class="textWin">
-                Parabéns, Você ganhou! Siga para o próximo desafio.
+                Parabéns, você ganhou! Siga para o próximo desafio.
               </p>
             </div>
             <div class="modal-footer">
@@ -345,7 +346,12 @@
                 qual foi a sua lógica para a resolução das questões:
               </p>
               <div class="d-flex flex-row">
-                <input type="text" class="form-control me-1" name="logic" />
+                <input
+                  type="text"
+                  class="form-control me-1"
+                  name="logic"
+                  autocomplete="off"
+                />
                 <button
                   data-submit-logic
                   type="button"
@@ -411,7 +417,9 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <p id="modalLabel" class="h5 modal-title">Ops, o número de tentativas acabou!</p>
+              <p id="modalLabel" class="h5 modal-title">
+                Ops, o número de tentativas acabou!
+              </p>
             </div>
 
             <div class="modal-body">
