--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -81,13 +81,30 @@
         </div>
 
         <div data-game-screen class="d-block game-screen overflow-hidden">
-          <div
-            class="progress"
-            role="progressbar"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          >
-            <div class="progress-bar" style="width: 0%"></div>
+          <div class="progress-stacked">
+            <div
+              class="progress"
+              role="progressbar"
+              style="width: 0%"
+              aria-label="Segment one"
+              aria-valuenow="0"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-success"></div>
+            </div>
+
+            <div
+              class="progress"
+              role="progressbar"
+              style="width: 0%"
+              aria-label="Segment two"
+              aria-valuenow="0"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-danger"></div>
+            </div>
           </div>
 
           <div class="d-block p-3 text-end">
