--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -363,12 +363,12 @@
                 qual foi a sua lógica para a resolução das questões:
               </p>
               <div class="d-flex flex-row">
-                <input
-                  type="text"
+                <textarea
                   class="form-control me-1"
                   name="logic"
-                  autocomplete="off"
-                />
+                  rows="1"
+                >
+                </textarea>
                 <button
                   data-submit-logic
                   type="button"
